# KLTN_22028235

./: .gitignore  CMakeLists.txt  README.md  UP_AND_RUNNING.md  driver1.sln
SHAP/: .gitignore  README.md  app.py  capa-output-sample.json  explainer.py  requirements.txt  xAI.ipynb
benchmarks/procbench/: tc04.json
common/: CMakeLists.txt
demo/src/: main.cpp
driver/include/pmd_driver/: driver.h
driver/src/: communication.cpp
driver1/: attest.c  attest.h  config.c  config.h  driver.c  driver1.inf  driver1.vcxproj  drivertools.c  generate_secret.py  proctools.c  proctools.h  termproc.c  termproc.h
ember2024-lgbm/: UP_AND_RUNNING.md
ember2024-lgbm/model/src/: direct_model.cpp  direct_model.h  resources.h
ember2024-lgbm/pmd_engine/: CMakeLists.txt
ember2024-lgbm/pmd_engine/src/: e24lgbm_pmd_engine.cpp
engine/src/: resources.h
experiments/metapath2vec/: main.py
feature_engineering/: CMakeLists.txt
main/: CMakeLists.txt
main/include/pmd_ui/: app.h
main/src/: WindowsServiceImpl.cpp  app.cpp
model/: CMakeLists.txt
model/resources/: EMBER2024_all.model
model/src/: direct_model.cpp  resources.cpp
onehotcapa/: .gitignore  README.md
onehotcapa/scripts/: EMBER2024+Capa1.model  EMBER2024.model  README.md  capa_features.json  common_utils.py  enumerate_capa_features.py  train_lgbm.py
plans/metapath2vec/: README.md
plans/metapath2vec/main/: __init__.py
plans/metapath2vec/main/all/: __init__.py
plans/metapath2vec/main/common/: walk_generator.py
plans/metapath2vec/main/lr/training/: __init__.py
plans/metapath2vec/main/metapath2vec/training/: __init__.py
pmd_engine/: CMakeLists.txt  README.md
pmd_engine/include/: e24lgbm_pmd_engine_impl.h
pmd_engine/src/: e24lgbm_pmd_engine_impl.cpp
pmd_engine_v2/include/: pmd_engine_v2.h
pmd_engine_v2/src/: pmd_engine_v2_impl.cpp
report/: cover.tex  references.bib  thesis.aux  thesis.bbl  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc
report/chapters/: abtract_en.tex  abtract_vi.tex  acknowledgement.tex  assurance.tex  conclusion.tex  glossary.tex
report/chapters/c1/: c1_introduction.tex
report/chapters/c2/: c2_chapter.tex
report/chapters/c3/: c3_chapter.tex
report/chapters/c4/: c4_chapter.tex
report/more/: pipeline.drawio  system-diagram.drawio
src/components/deep-analysis-server/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
src/components/deep-analysis-server/core/: explainer.py  explanation.html  feature_locations.py
src/components/deep-analysis-server/core/capa/: capa_output_remapped_sample.json
src/components/deep-analysis-server/core/models/: EMBER2024+CapaTruncatedSVD256.model
src/components/deep-analysis-server/main/: __main__.py  analyzer.py  database.py  env.py  models.py  worker.py
src/components/deep-analysis-server/main/templates/: analysis.html  index.html
src/components/ember2024-lgbm/: .gitignore  CMakeLists.txt  README.md
src/components/ember2024-lgbm/benchmarks/procbench/: README.md  results.html  results.json  tc01.json  tc02.json  tc03.json  tc05.json
src/components/ember2024-lgbm/cmakerc/: CMakeLists.txt
src/components/ember2024-lgbm/demo/: CMakeLists.txt
src/components/ember2024-lgbm/demo/src/: main.cpp
src/components/ember2024-lgbm/model/include/ember2024_lgbm/: model.h
src/components/ember2024-lgbm/model/src/: model.cpp
src/components/ember2024-lgbm/pmd_engine/include/: e24lgbm_pmd_engine.h
src/components/ember2024-lgbm/pmd_engine/src/: e24lgbm_pmd_engine_impl.cpp
src/components/ember2024-lgbm/pmd_engine_v2/: CMakeLists.txt
src/components/ember2024-lgbm/pmd_engine_v2/include/: pmd_engine_v2_impl.h
src/components/ember2024-lgbm/pmd_engine_v2/src/: pmd_engine_v2.cpp  pmd_engine_v2_impl.cpp
src/components/pmd-driver/: .gitignore
src/components/pmd-driver/driver1/: config.h  driver1.inf  driver1.vcxproj  drivertools.h  proctools.c
src/components/pmd-service/: CMakeLists.txt  LICENSE.txt  README-template.md  README.md
src/components/pmd-service/common/src/: utils.cpp
src/components/pmd-service/engine/: .gitignore  CMakeLists.txt  README.md
src/components/pmd-service/engine/include/pmd_engine/: engine.h
src/components/pmd-service/engine/src/: engine.cpp  resources.cpp
src/components/pmd-service/main/: CMakeLists.txt
src/components/pmd-service/main/include/: Logging.h  (+1 more)
src/components/pmd-ui/: CMakeLists.txt
src/components/pmd-ui/common/: CMakeLists.txt
src/components/pmd-ui/common/include/pmd_ui/: utils.h
src/components/pmd-ui/common/src/: utils.cpp
src/components/pmd-ui/docs/: PROMPT.md
src/components/pmd-ui/driver/: CMakeLists.txt
src/components/pmd-ui/driver/include/pmd_driver/: communication.h  config.h
src/components/pmd-ui/driver/src/: communication.cpp  config.cpp
src/components/pmd-ui/main/: CMakeLists.txt
src/components/pmd-ui/main/include/pmd_ui/: data_fetcher.h  detection.h  main_view.h  messages.h  upload_file.h
src/components/pmd-ui/main/src/: data_fetcher.cpp  main.cpp  main_view.cpp  upload_file.cpp
src/ember2024-fe-cpp/pefile/src/: authenticode_signature.cpp
src/experiments/SHAP/: FEATURE_LOCATIONS.txt  explainer.py  feature_locations.py  requirements.txt
src/experiments/SHAP-capa/: .gitignore  README.md  app.py  efe_cpp.py  explainer.py  explanation.html.template
src/experiments/SHAP-capa/capa/: README.md  capa_features.json  capa_output_sample.json  capa_remap.py
src/experiments/metapath2vec/: .gitignore  README.md  requirements.txt
src/experiments/onehotcapa/: README.md  requirements.txt
src/experiments/onehotcapa/scripts/: EMBER2024+Capa1.model_Truncated_SVD.pkl  EMBER2024+CapaTruncatedSVD128.model  _Truncated_SVD_128.pkl  _Truncated_SVD_256.pkl  capa_features.json  enumerate_capa_features.py  lgbm_config.json  vectorize.py
src/plans/metapath2vec/: .gitignore  requirements.txt  sample.json
src/plans/metapath2vec/docs/: DESIGN.md  SANITIZE_DATA.md
src/plans/metapath2vec/main/: __main__.py
src/plans/metapath2vec/scripts/: sanitize.py
tests/resources/efe_test_data/: index.sqlite3
(+11 files in other folders)
